trimmed 01_gather_vacation_tweets notebook

--- a/data_collection/01_gather_vacation_tweets.ipynb
+++ b/data_collection/01_gather_vacation_tweets.ipynb
@@ -232,52 +232,11 @@
    },
    "outputs": [],
    "source": [
-    "# Import a list of cities and states in the US\n",
-    "# and put it on my MySQL server\n",
+    "# Filter out tweets from users with with names not in the baby names list.\n",
+    "# This is to filter out tweets from advertisers and travel agencies.\n",
     "\n",
-    "cities = pd.read_csv('cities.csv', usecols=['city']).values.tolist()\n",
-    "df_states = pd.read_csv('state_table.csv', usecols=['name', 'abbreviation'])\n",
-    "states = df_states['name'].values.tolist()\n",
-    "states_abbrev = df_states['abbreviation'].tolist()\n",
-    "df_all = pd.DataFrame({'location':cities+states+states+states_abbrev})\n",
-    "\n",
-    "# Save the data on my mySQL server\n",
-    "df_all.to_sql('home_locations', engine, if_exists='replace', index=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
-   "source": [
-    "# Summarize the results.\n",
-    "\n",
-    "# Total number of tweets for each location\n",
-    "total = df_tweets.groupby(['Destination']).size()\n",
-    "\n",
-    "# Filter out tweets with locations that aren't\n",
-    "# US states or cities\n",
-    "df_tweets_has_loc = df_tweets[df_tweets['Home Location']!='']\n",
-    "df_tweets_has_loc = df_tweets_has_loc[df_tweets_has_loc['Home Location'].str.contains(pattern)]\n",
-    "has_loc = df_tweets_has_loc.groupby(['Destination']).size()\n",
-    "\n",
-    "# Filter out tweets with names not in the baby names list\n",
     "has_name = df_tweets[df_tweets['First Name'].isin(df_names.index)].groupby(['Destination']).size()\n",
-    "df_tweets_has_name = df_tweets[df_tweets['First Name'].isin(df_names.index)]\n",
-    "\n",
-    "# Now filter both locations and names\n",
-    "df_both = df_tweets_has_loc[df_tweets_has_loc['First Name'].isin(df_names.index)]\n",
-    "has_both = df_both.groupby(['Destination']).size()\n",
-    "\n",
-    "df_summary = pd.DataFrame({\n",
-    "        'Total': total,\n",
-    "        'with Location': has_loc,\n",
-    "        'with Name': has_name,\n",
-    "        'with Both': has_both})\n",
-    "df_summary = df_summary[['Total','with Location','with Name','with Both']]"
+    "df_tweets_has_name = df_tweets[df_tweets['First Name'].isin(df_names.index)]"
    ]
   },
   {
@@ -288,7 +247,9 @@
    },
    "outputs": [],
    "source": [
-    "# Copy the pandas dataframe data into the 'vacation_tweets' table on mySQL\n",
+    "# Copy the pandas dataframe data into the 'vacation_tweets_w_name' table\n",
+    "# in MySQL\n",
+    "\n",
     "df_tweets_has_name.to_sql('vacation_tweets_w_name', engine, if_exists='replace', index=False)"
    ]
   }
